# robot_framework

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  BaseCommsSystem_8hpp.html  BaseCommsSystem_8hpp.js  BaseCommsSystem_8hpp__dep__incl.map  BaseCommsSystem_8hpp__dep__incl.md5  BaseCommsSystem_8hpp__incl.map  BaseCommsSystem_8hpp__incl.md5  BaseCommsSystem_8hpp_source.html  BaseDataStorageSystem_8hpp.html  BaseDataStorageSystem_8hpp.js  BaseDataStorageSystem_8hpp__dep__incl.map  BaseDataStorageSystem_8hpp__dep__incl.md5  BaseDataStorageSystem_8hpp__incl.map  BaseDataStorageSystem_8hpp__incl.md5  BaseDataStorageSystem_8hpp_source.html  BaseDriveExecutorProcess_8hpp.html  BaseDriveExecutorProcess_8hpp.js  BaseDriveExecutorProcess_8hpp__dep__incl.map  BaseDriveExecutorProcess_8hpp__dep__incl.md5  BaseDriveExecutorProcess_8hpp__incl.map  BaseDriveExecutorProcess_8hpp__incl.md5  BaseDriveExecutorProcess_8hpp_source.html  BaseFreeSpacePlannerProcess_8hpp.html  BaseFreeSpacePlannerProcess_8hpp.js  BaseFreeSpacePlannerProcess_8hpp__dep__incl.map  BaseFreeSpacePlannerProcess_8hpp__dep__incl.md5  BaseFreeSpacePlannerProcess_8hpp__incl.map  BaseFreeSpacePlannerProcess_8hpp__incl.md5  BaseFreeSpacePlannerProcess_8hpp_source.html  BaseGlobalPathRoutePlannerProcess_8hpp.html  BaseGlobalPathRoutePlannerProcess_8hpp.js  BaseGlobalPathRoutePlannerProcess_8hpp__dep__incl.map  BaseGlobalPathRoutePlannerProcess_8hpp__dep__incl.md5  BaseGlobalPathRoutePlannerProcess_8hpp__incl.map  BaseGlobalPathRoutePlannerProcess_8hpp__incl.md5  BaseGlobalPathRoutePlannerProcess_8hpp_source.html  BaseGlobalPathStorageProcess_8hpp.html  (+1560 more)
Systems/: CMakeLists.txt  SystemTemplate.md
Systems/Awareness/: System-Awareness.md
Systems/Awareness/dia/: AwarenessSystemArchitecture.dia
Systems/Awareness/doc/: System-Awareness.md
Systems/Awareness/doc/dia/: AwarenessSystemArchitecture.dia
Systems/Awareness/doc/puml/: SystemAwarenessPackageDiagram.puml
Systems/Awareness/puml/: SystemAwarenessClassDiagram.puml  SystemAwarenessPackageDiagram.puml
Systems/Comms/: CMakeLists.txt
Systems/Comms/doc/: CommsSystem.dox  System-Comms.md
Systems/Comms/doc/puml/: SystemCommsPackageDiagram.puml
Systems/Comms/include/: BaseCommsSystem.hpp  ICommsSystem.hpp
Systems/Comms/include/DummyCommsSystem/: DummyCommsSystem.hpp
Systems/Comms/src/: BaseCommsSystem.cpp  CMakeLists.txt
Systems/Comms/src/DummyCommsSystem/: DummyCommsSystem.cpp
Systems/Comms/src/test/: test_DummyCommsSystem.cpp  test_system_Comms.cpp
Systems/DataStorage/: CMakeLists.txt
Systems/DataStorage/doc/: DataStorageSystem.dox  System-DataStorage.md
Systems/DataStorage/doc/puml/: SystemDataStoragePackageDiagram.puml
Systems/DataStorage/include/: BaseDataStorageSystem.hpp  IDataStorageSystem.hpp
Systems/DataStorage/include/DummyDataStorageSystem/: DummyDataStorageSystem.hpp
Systems/DataStorage/src/: BaseDataStorageSystem.cpp  CMakeLists.txt
Systems/DataStorage/src/DummyDataStorageSystem/: DummyDataStorageSystem.cpp
Systems/DataStorage/src/test/: test_DummyDataStorageSystem.cpp  test_system_DataStorage.cpp
Systems/GoalPlanning/: CMakeLists.txt
Systems/GoalPlanning/doc/: GoalPlanningSystem.dox  System-GoalPlanning.md
Systems/GoalPlanning/doc/puml/: SystemGoalPlanningPackageDiagram.puml
Systems/GoalPlanning/include/: BaseGoalPlanningSystem.hpp  IGoalPlanningSystem.hpp
Systems/GoalPlanning/include/DummyGoalPlanningSystem/: DummyGoalPlanningSystem.hpp
Systems/GoalPlanning/src/: BaseGoalPlanningSystem.cpp  CMakeLists.txt
Systems/GoalPlanning/src/DummyGoalPlanningSystem/: DummyGoalPlanningSystem.cpp
Systems/GoalPlanning/src/test/: test_DummyGoalPlanningSystem.cpp  test_system_GoalPlanning.cpp
Systems/ImplementControl/: CMakeLists.txt
Systems/ImplementControl/doc/: ImplementControlSystem.dox  System-ImplementControl.md
Systems/ImplementControl/include/: BaseImplementControlSystem.hpp  IImplementControlSystem.hpp
Systems/ImplementControl/src/: BaseImplementControlSystem.cpp  CMakeLists.txt
Systems/ModeControl/: CMakeLists.txt
Systems/ModeControl/doc/: ModeControlSystem.dox  System-ModeControl.md
Systems/ModeControl/include/: BaseModeControlSystem.hpp  IModeControlSystem.hpp
Systems/ModeControl/src/: BaseModeControlSystem.cpp  CMakeLists.txt
Systems/Navigation/: CMakeLists.txt
Systems/Navigation/Subsystems/: CMakeLists.txt
Systems/Navigation/doc/: NavigationSystem.dox  System-Navigation.md
Systems/Navigation/include/: BaseNavigationSystem.hpp  INavigationSystem.hpp
Systems/Navigation/src/: BaseNavigationSystem.cpp  CMakeLists.txt
Systems/Perception/: CMakeLists.txt
Systems/Perception/doc/: PerceptionSystem.dox  System-Perception.md
Systems/Perception/include/: BasePerceptionSystem.hpp  IPerceptionSystem.hpp
Systems/Perception/src/: BasePerceptionSystem.cpp  CMakeLists.txt
Systems/Pose/: CMakeLists.txt
Systems/Pose/Subsystems/: CMakeLists.txt
Systems/Pose/doc/: PoseSystem.dox  System-Pose.md
Systems/Pose/include/: BasePoseSystem.hpp  IPoseSystem.hpp
Systems/Pose/src/: BasePoseSystem.cpp  CMakeLists.txt
Systems/Safety/: CMakeLists.txt
Systems/Safety/doc/: SafetySystem.dox  System-Safety.md
Systems/Safety/include/: BaseSafetySystem.hpp  ISafetySystem.hpp
Systems/Safety/src/: BaseSafetySystem.cpp  CMakeLists.txt
Systems/Terrain/: CMakeLists.txt
Systems/Terrain/doc/: System-Terrain.md  TerrainSystem.dox
Systems/Terrain/include/: BaseTerrainSystem.hpp  ITerrainSystem.hpp
Systems/Terrain/src/: BaseTerrainSystem.cpp  CMakeLists.txt
Systems/UserInterface/: CMakeLists.txt
Systems/UserInterface/doc/: System-UserInterface.md  UserInterfaceSystem.dox
Systems/UserInterface/include/: BaseUserInterfaceSystem.hpp  IUserInterfaceSystem.hpp
Systems/UserInterface/src/: BaseUserInterfaceSystem.cpp  CMakeLists.txt
Systems/doc/puml/: RobotFrameworkSystemPackageDiagram.puml
msgs/GeometryMsgs/src/: CMakeLists.txt
msgs/InfrastructureMsgs/src/: CMakeLists.txt
msgs/NavMsgs/src/: CMakeLists.txt
msgs/SensorMsgs/src/: CMakeLists.txt
msgs/StandardMsgs/src/: CMakeLists.txt
(+611 files in other folders)
