# add_subdirectory(Awareness)
add_subdirectory(Comms)
add_subdirectory(DataStorage)
add_subdirectory(GoalPlanning)
add_subdirectory(ImplementControl)
add_subdirectory(ModeControl)
add_subdirectory(Navigation)
add_subdirectory(Perception)
add_subdirectory(Pose)
add_subdirectory(Safety)
add_subdirectory(Terrain)
add_subdirectory(UserInterface)
